--- a/backend/fundsite/src/main/resources/application.properties
+++ b/backend/fundsite/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=fundsite
-
+server.port = 8080
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/donation_db
